Reorder chart difficulty descriptors

--- a/index.html
+++ b/index.html
@@ -594,11 +594,11 @@
         { value: 5, text: "5 – One click from completion—review and sign only." }
       ],
       difficulty: [
-        { value: 1, text: "1 – Straightforward chart; minimal thought required." },
-        { value: 2, text: "2 – Small amount of synthesis or clean-up work." },
+        { value: 1, text: "1 – Very complex visit—multiple specialists, high stakes." },
+        { value: 2, text: "2 – High cognitive load—multiple notes or CareEverywhere data to merge." },
         { value: 3, text: "3 – Moderate effort—some review of orders, results, or medication changes." },
-        { value: 4, text: "4 – High cognitive load—multiple notes or CareEverywhere data to merge." },
-        { value: 5, text: "5 – Very complex visit—multiple specialists, high-stakes content, or documentation risk." }
+        { value: 4, text: "4 – Small amount of synthesis or clean-up work." },
+        { value: 5, text: "5 – Straightforward chart; minimal thought required." }
       ]
     }
   };
